# esri2gpd

./: .travis.yml  LICENSE  MANIFEST.in  README.md  conda-build.sh  deploy_anaconda.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
conda-recipe/arcgis2geojson/: meta.yaml
conda-recipe/esri2gpd/: meta.yaml
esri2gpd/: __init__.py  core.py  esri2gpd.py
esri2gpd/tests/: test_get.py
esri2sf/: esri2sf.py
